# scrapy-demos

./: .gitignore  README.md  pyproject.toml
scrapy_demos/bookSpider/bookSpider/: settings.py
scrapy_demos/datasheetSpider/: scrapy.cfg
scrapy_demos/datasheetSpider/datasheetSpider/: items.py  middlewares.py  pipelines.py  settings.py
scrapy_demos/jdbookSpider/jdbookSpider/: items.py  middlewares.py  pipelines.py  settings.py
scrapy_demos/kongfzSpider/: scrapy.cfg
scrapy_demos/kongfzSpider/kongfzSpider/: items.py  middlewares.py  pipelines.py  settings.py
scrapy_demos/labuladongSpider/: scrapy.cfg
scrapy_demos/labuladongSpider/labuladongSpider/: items.py  middlewares.py  pipelines.py  settings.py
scrapy_demos/loggingSpider/: log_a.py  log_b.py  scrapy.cfg
scrapy_demos/loggingSpider/loggingSpider/: items.py  middlewares.py  pipelines.py  settings.py
scrapy_demos/loginSpider/loginSpider/: items.py  middlewares.py  pipelines.py  settings.py
scrapy_demos/meijuSpider/: scrapy.cfg
scrapy_demos/meijuSpider/meijuSpider/: items.py  middlewares.py  pipelines.py  settings.py
scrapy_demos/sun0769Spider/: scrapy.cfg
scrapy_demos/sun0769Spider/sun0769Spider/: items.py  middlewares.py  pipelines.py  settings.py
scrapy_demos/tiobeSpider/: scrapy.cfg
scrapy_demos/tiobeSpider/tiobeSpider/: items.py  middlewares.py  pipelines.py  settings.py
scrapy_demos/upListSpider/: scrapy.cfg
scrapy_demos/upListSpider/upListSpider/: items.py  middlewares.py  pipelines.py  settings.py
scrapy_demos/zhipinSpider/zhipinSpider/: items.py  (+2 more)
tests/: test_scrapy_demos.py
(+13 files in other folders)
