[tool.poetry]
name = "scrapy-demos"
version = "0.1.0"
description = ""
authors = ["I306454 <jiabin.zheng01@sap.com>"]

[tool.poetry.dependencies]
python = "^3.7"
scrapy = "^2.5.1"
scrapy-redis = "^0.7.2"
html2text = "^2020.1.16"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[[tool.poetry.source]]
name = "douban"
url = "https://pypi.doubanio.com/simple/"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

